Hidden behind div bug fixed

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -62,6 +62,7 @@ td{
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
+  position: relative;
 }
 
 #activityItem:hover{
